src/objects/Run_Log__c.object
<CustomObject>
    <description>Contains the information on what campaign media has actually run and when</description>
    <fields>
        <fullName>Ad_Length__c</fullName>
        <description>Indicates the length of the ad</description>
        <label>Ad Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>The Campaign this media/ad was tied to.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Run Logs</relationshipLabel>
        <relationshipName>Run_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <label>Clicks</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISCI__c</fullName>
        <description>The unique identifier that will tie this ad to a campaign</description>
        <label>ISCI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <label>Impressions</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Run_Time__c</fullName>
        <description>The time the ad was run in the market</description>
        <label>Local Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sales market the ad was run in/for</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Run Logs</relationshipLabel>
        <relationshipName>Run_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mountain_Run_Time__c</fullName>
        <description>The actual timestamp that should convert to the current users time zone -(would equate to mountain time)</description>
        <label>Mountain Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>Indicates the network or stating the ad ran on.</description>
        <label>Network</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount spent on the ad running in this slot</description>
        <label>Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <description>Date part for when the add was run</description>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <label>Run Log</label>
    <nameField>
        <displayFormat>RID-{0}</displayFormat>
        <label>Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>